0024073: Coding rules - ambiguous call to overloaded function StdPrs_DeflectionCurve::Match()

Default parameters values have been removed from the methods
StdPrs_DeflectionCurve::Match() to avoid ambiguity.